deploy/kustomization/argocd/ha/istio_patches_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: argocd-applicationset-controller
    app.kubernetes.io/part-of: argocd-applicationset
    app: argocd-applicationset-controller
    version: v2.6.1
  name: argocd-applicationset-controller
spec:
  template:
    metadata:
      labels:
        app: argocd-applicationset-controller
        version: v2.6.1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: dex-server
    app.kubernetes.io/name: argocd-dex-server
    app.kubernetes.io/part-of: argocd
    app: argocd-dex-server
    version: v2.35.3
  name: argocd-dex-server
spec:
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: argocd-dex-server
        version: v2.35.3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-notifications-controller
spec:
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-notifications-controller
        app: argocd-notifications-controller
        version: v2.6.1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: redis
    app.kubernetes.io/name: argocd-redis-ha-haproxy
    app.kubernetes.io/part-of: argocd
    app: argocd-redis-ha-haproxy
    version: v2.6.2-alpine
  name: argocd-redis-ha-haproxy
spec:
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: argocd-redis-ha-haproxy
        version: v2.6.2-alpine
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/part-of: argocd
    app: argocd-repo-server
    version: v2.6.1
  name: argocd-repo-server
spec:
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: argocd-repo-server
        version: v2.6.1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
    app: argocd-server
    version: v2.6.1
  name: argocd-server
spec:
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: argocd-server
        version: v2.6.1
    spec:
      containers:
      - name: argocd-server
        command:
        - argocd-server
        - --redis
        - argocd-redis-ha-haproxy:6379
        - --staticassets
        - /shared/app
        - --insecure
