deploy/kustomization/argocd/ha/istio_patches_statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: application-controller
    app.kubernetes.io/name: argocd-application-controller
    app.kubernetes.io/part-of: argocd
    app: argocd-application-controller
    version: v2.8.2
  name: argocd-application-controller
spec:
  revisionHistoryLimit: 3
  replicas: 3
  template:
    metadata:
      labels:
        app: argocd-application-controller
        version: v2.8.2
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: redis
    app.kubernetes.io/name: argocd-redis-ha
    app.kubernetes.io/part-of: argocd
    app: argocd-redis-ha-server
    version: v7.0.11-alpine
  name: argocd-redis-ha-server
spec:
  template:
    metadata:
      labels:
        app: argocd-redis-ha
        version: v7.0.11-alpine
